[gd_scene load_steps=5 format=2]

[ext_resource path="res://font/Chocolate Bar Demo.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Hud.gd" type="Script" id=2]
[ext_resource path="res://sprites/collectibles/powerup-cenoura.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="Hud" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WaveText" type="RichTextLabel" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -343.0
margin_top = 20.0
margin_right = -2.0
margin_bottom = 95.0
custom_fonts/normal_font = SubResource( 1 )
text = "Wave: 0000"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_left = 51.0
margin_top = 23.0
margin_right = 147.0
margin_bottom = 119.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="CollectibleCarrotText" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 127.0
margin_top = 23.0
margin_right = 282.0
margin_bottom = 98.0
custom_fonts/normal_font = SubResource( 1 )
text = "00"

[node name="CollectibleStrongText" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 377.0
margin_top = 23.0
margin_right = 533.0
margin_bottom = 98.0
custom_fonts/normal_font = SubResource( 1 )
text = "00"

[node name="CollectibleFastText" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 734.0
margin_top = 20.0
margin_right = 890.0
margin_bottom = 78.0
custom_fonts/normal_font = SubResource( 1 )
text = "00"
